# ai-cli

./: .gitignore  README.md  natural_language_processing.ipynb  pyproject.toml  requirements.in  requirements.txt  update-libs.sh
ai_cli/: main.py
ai_cli/commands/: inference_commands.py
ai_cli/utils/: context_utils.py  data_utils.py  file_utils.py  message_utils.py
